fwupd: Do not crash when trying to list a locked device

Locked devices do not have FwupdRelease objects set as the 'Install' action is
mapped internally to an 'Unlock' action instead. Create a GsApp object based
just on the FwupdDevice properties in this case.

Should resolve: https://bugzilla.gnome.org/show_bug.cgi?id=789985

(This cherry picks applicable portions from commit
d1b75f27e46c0dd5b656ce7bc5859158a80299c7)